update landing - fix issuses
- fix overlapping slides on the others by using positioning the card body and z-index and resetting one element overflow from bootstrap
- fix the carousel indicaters problem , by bootstrap id and js

--- a/CSS/css frameworks/bootstrap/cloneNetflix/landing.scss
+++ b/CSS/css frameworks/bootstrap/cloneNetflix/landing.scss
@@ -157,6 +157,7 @@ body {
 .slider2 {
   position: absolute;
   top: 14rem;
+  margin-top: 2rem;
 }
 .carousel-indicator-custom {
   .btn {
@@ -167,28 +168,34 @@ body {
     background-color: $black-op;
   }
 }
-
+.carousel-inner {
+  overflow: visible;
+} /*Reset the bootstrap ovrflow:hiffern*/
 .carousel-item {
+  overflow: visible;
   .card {
     width: 18%;
     margin: 2rem;
-    transition: all 2ms linear;
+    transition: all 0.2s linear;
     position: relative;
     &:hover {
-      transform: scale(1.1);
+      transform: scale(1.2);
+      z-index: 2;
     }
     .card-body {
-      height: fit-content;
       display: none;
+      height: fit-content;
+      width: 100%;
       padding: 1rem 1.5rem;
       background-color: #141414;
+      border-bottom-left-radius: 0.5rem;
+      border-bottom-right-radius: 0.5rem;
       position: absolute;
-      top: 20%;
-      z-index: 3;
+      top: 100%;
     }
     &:hover .card-body {
       display: block;
-      z-index: 5;
+      z-index: 3;
     }
     // FIXME: cards appearance, whitout positioning and positiond both have got problem
   }
